# clothsim

./: .gitignore  CMakeLists.txt  Cloth.h  LICENSE  README.md  Spring.h
src/: Cloth.cpp  Cloth.h  Constants.h  Particle.h  Shader.h  Spring.h  cloth.frag  cloth.vert  main.cpp  mesh.frag  mesh.vert  normalWS.frag  normalWS.vert
